--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.4.1
+decouple==0.0.7
 Django==3.2.9
 django-cors-headers==3.10.0
+django-environ==0.8.1
 djangorestframework==3.12.4
+environ==1.0
 lexpy==0.9.8
 pytz==2021.3
 sqlparse==0.4.2
