--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,21 @@
 asgiref==3.4.1
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.10
+cryptography==36.0.1
 decouple==0.0.7
 Django==3.2.9
 django-cors-headers==3.10.0
 django-environ==0.8.1
 djangorestframework==3.12.4
+drf-jwt==1.19.2
 environ==1.0
 idna==3.3
 lexpy==0.9.8
+pycparser==2.21
+PyJWT==2.3.0
 pytz==2021.3
 requests==2.27.1
 sqlparse==0.4.2
 urllib3==1.26.8
+utils==1.0.1
