--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,14 +4,18 @@ cffi==1.15.0
 charset-normalizer==2.0.10
 cryptography==36.0.1
 decouple==0.0.7
+dj-database-url==0.5.0
 Django==3.2.9
 django-cors-headers==3.10.0
 django-environ==0.8.1
+django-on-heroku==1.1.2
 djangorestframework==3.12.4
 drf-jwt==1.19.2
 environ==1.0
+gunicorn==20.1.0
 idna==3.3
 lexpy==0.9.8
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 pytz==2021.3
@@ -19,3 +23,4 @@ requests==2.27.1
 sqlparse==0.4.2
 urllib3==1.26.8
 utils==1.0.1
+whitenoise==5.3.0
