--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.15.0
 charset-normalizer==2.0.10
 cryptography==36.0.1
 decouple==0.0.7
+dill==0.3.4
 dj-database-url==0.5.0
 Django==3.2.9
 django-cors-headers==3.10.0
@@ -15,6 +16,7 @@ environ==1.0
 gunicorn==20.1.0
 idna==3.3
 lexpy==0.9.8
+pickle-mixin==1.0.2
 psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
