--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dill==0.3.4
 dj-database-url==0.5.0
 Django==3.2.9
 django-cors-headers==3.10.0
+django-debug-toolbar==3.2.4
 django-environ==0.8.1
 django-on-heroku==1.1.2
 djangorestframework==3.12.4
@@ -20,6 +21,7 @@ pickle-mixin==1.0.2
 psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
+Pympler==1.0.1
 pytz==2021.3
 requests==2.27.1
 sqlparse==0.4.2
