--- a/requirements.txt
+++ b/requirements.txt
@@ -18,13 +18,17 @@ gunicorn==20.1.0
 idna==3.3
 lexpy==0.9.8
 pickle-mixin==1.0.2
+psutil==5.9.0
 psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 Pympler==1.0.1
+pyOpenSSL==22.0.0
 pytz==2021.3
 requests==2.27.1
+scout-apm==2.23.5
 sqlparse==0.4.2
 urllib3==1.26.8
 utils==1.0.1
 whitenoise==5.3.0
+wrapt==1.13.3
